Made "show values" off by default and resets under "reset all"
Moved "show values" checkbox to the concentration bar chart
Removed "evaporate water" checkbox since the evaporation slider is always shown
Added an evaporation slider to the canvas and wired it up to the model
Fixed: cursor gets away from the salt shaker
Improved sugar shaker so it only rotates, and emits sugar when it is being rotated and pointed down and to the left (proportionate to the amount of rotation)
# 0.00.07 (51915) May 13, 2011
Improved salt shaker so it uses acceleration and deceleration along its axis to determine how much salt comes out
Fixed: salt shaker should only translate up and down and side to side, not rotate
Fixed: salt shaker doesn't reset on reset all
Fixed: salt shaker should be in front
Fixed: conductivity tester doesn't appear in the new coordinate frame
Added tick marks and labels for beaker volume
Fixed: bar charts fill up too quickly
# 0.00.06 (51903) May 13, 2011
Made the fluid start halfway up the beaker
Fixed units and make the beaker, shakers and faucets be the right size and in the right locations in SI units
Switched to semi-sweet chocolate as the default background color
# 0.00.05 (51898) May 13, 2011
Made it possible to modify background and salt colors with developer menu items
Removed "show concentration" checkbox, will be moved to a maximize/minimize button on the concentration bar chart
# 0.00.04 (51837) May 11, 2011
Removed workaround and improved probe initial locations
Moved solute selection closer to the shaker
Fixed: Offset fluid flow so it doesn't go past the bottom of the beaker
Moved the top faucet down a little bit, so the slider doesn't go offscreen
Improved the salt shaker
Show conductivity (and hence battery brightness) as linear with concentrations of salt ions
improved reset for conductivity tester and sugar dispenser
improved sugar pouring
improved user interaction for the sugar dispenser