@@ -1,3 +1,4 @@
+Added +/- buttons to show/hide the concentration bar chart
 Made "show values" off by default and resets under "reset all"
 Moved "show values" checkbox to the concentration bar chart
 Removed "evaporate water" checkbox since the evaporation slider is always shown
